--- a/templates/nginx.php.conf.erb
+++ b/templates/nginx.php.conf.erb
@@ -72,6 +72,7 @@ server {
         fastcgi_param SCRIPT_NAME $script;
         fastcgi_param PATH_INFO $path_info;
 	fastcgi_intercept_errors on;
+	fastcgi_read_timeout 1200;
 	
     }
 
